--- a/CS/switcher/switcher/ThemeSwitcher/ThemeSwitcherContainer.razor
+++ b/CS/switcher/switcher/ThemeSwitcher/ThemeSwitcherContainer.razor
@@ -10,7 +10,7 @@
                 @foreach(var themeSet in Themes.ThemeSets) {
                     <span class="themeswitcher-group card-header list-group-item">@themeSet.Title</span>
                     @foreach(var theme in themeSet.Themes) {
-                        <ThemeSwitcherItem Theme="@theme" Click="ThemeSwitcherItem_Click"/>
+                        <ThemeSwitcherItem Theme="@theme" ActiveThemeName="@ThemeName" Click="ThemeSwitcherItem_Click" />
                     }
                 }
             </div>
