bug fix:change "blazor-berry" to "blazing-berry"

--- a/CS/switcher/switcher/ThemeSwitcher/ThemeSwitcher.razor
+++ b/CS/switcher/switcher/ThemeSwitcher/ThemeSwitcher.razor
@@ -16,7 +16,7 @@
 @code {
     [Inject]
     private Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor { get; set; }
-    private string? InitialThemeName { get; set; } = "blazor-berry";
+    private string? InitialThemeName { get; set; } = "blazing-berry";
 
     string _themeName;
     bool _themeSwitcherShown;
